-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.13.0-beta1
-
None
The environment comes with the new PathListDialog.
Problem: When it opens, it converts all dir delimiters to native ones, and when closing it converts all to '/'.
Before:

PathListDialog:

After:

As a user I don't want either of these conversions.
- Why not convert all to '\': Because in some cases I am defining environment variables that are consumed bu UNIX-like tools which expect '/'. Or sometimes I am working on a remote Linux environment.
- Why not convert all to '/': Because in most cases, I want to have Paths in environments on Windows have the '\' separator since many tools out there require that.
- Bonus: Because the in-place editor and the batch editor of the EnvironmentWidget also do not meddle with my data.